--- a/sass/3-layouts/_process.scss
+++ b/sass/3-layouts/_process.scss
@@ -31,7 +31,7 @@
                 transform: scale(1.3);
             }
             .jump{
-                animation: jump 1s infinite;
+                animation: jump .6s infinite;
 
                 @keyframes jump {
                     0%{
@@ -41,7 +41,7 @@
                         transform: translateY(-40%);
                     }
                     25%{
-                        transform: translateY(-100%);
+                        transform: translateY(-75%);
                     }
                
                     40%{
